--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,7 +48,7 @@ jobs:
       run: mypy --strict leapseconddata.py
 
     - name: Test
-      run: python -mcoverage run --branch -m unittest && python -mcoverage report --fail-under=100 && python -mcoverage xml
+      run: python -mcoverage run --branch -m unittest leapseconddata_test.py && python -mcoverage report --fail-under=100 && python -mcoverage xml
 
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
