Add more TAI-wrangling
 * leapseconddata.tai is a timezone object.  BEWARE, because of reasons,
   it compares equal to datetime.datetime.utc!

 * tai_offset can take either kind of timestamp

 * to_tai, tai_to_utc: convert to/from the TAI timescale.

 * is_leap_second: return True if the given second is a leap second.
   In the UTC timescale, the ":59" second returns True even though
   "only" the second repetition of :59 is a leap second

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,10 +45,10 @@ jobs:
 
     - name: Check stubs
       if: (! startsWith(matrix.python-version, 'pypy-'))
-      run: mypy --strict leapseconddata.py
+      run: mypy --strict *.py
 
     - name: Test
-      run: python -mcoverage run --branch -m unittest leapseconddata_test.py && python -mcoverage report --fail-under=100 && python -mcoverage xml
+      run: python -mcoverage run --branch -m unittest testleapseconddata.py && python -mcoverage report --fail-under=100 && python -mcoverage xml
 
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
