--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,5 +6,8 @@ coverage
 mypy; implementation_name=="cpython"
 pre-commit
 setuptools>=45
+sphinx
+sphinx-autodoc-typehints
+sphinx-rtd-theme
 twine
 wheel
