--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         python-version: '3.10'
 
+    - uses: actions/checkout@v2.2.0
+
     - name: Install deps
       run: python -mpip install -r requirements-dev.txt
 
