Convert to package and add py.typed

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,5 +22,10 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+package_dir =
+    =.
 python_requires = >=3.7
-py_modules = leapseconddata
+packages = leapseconddata
+
+[options.package_data]
+leapseconddata = py.typed
