--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,11 +4,11 @@
 
 repos:
 -   repo: https://github.com/python/black
-    rev: 20.8b1
+    rev: 22.8.0
     hooks:
     - id: black
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.3.0
     hooks:
     -   id: check-yaml
     -   id: end-of-file-fixer
@@ -16,7 +16,7 @@ repos:
     -   id: trailing-whitespace
         exclude: tests
 -   repo: https://github.com/fsfe/reuse-tool
-    rev: v0.12.1
+    rev: v1.0.0
     hooks:
     - id: reuse
 -   repo: local
@@ -26,4 +26,10 @@ repos:
         entry: pylint
         language: python
         types: [python]
-        additional_dependencies: [beautifulsoup4, pylint, requests, adafruit-circuitpython-datetime, click, python-dateutil]
+        additional_dependencies: [beautifulsoup4, "pylint==2.15.3", requests, adafruit-circuitpython-datetime, click, python-dateutil]
+- repo: https://github.com/pycqa/isort
+  rev: 5.10.1
+  hooks:
+    - id: isort
+      name: isort (python)
+      args: ['--profile', 'black']
