--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,34 +2,33 @@
 #
 # SPDX-License-Identifier: Unlicense
 
+default_language_version:
+  python: python3
+
 repos:
--   repo: https://github.com/python/black
-    rev: 22.8.0
-    hooks:
-    - id: black
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-        exclude: tests
-    -   id: trailing-whitespace
-        exclude: tests
--   repo: https://github.com/fsfe/reuse-tool
-    rev: v1.0.0
-    hooks:
-    - id: reuse
--   repo: local
-    hooks:
-    -   id: pylint
-        name: pylint
-        entry: pylint
-        language: python
-        types: [python]
-        additional_dependencies: [beautifulsoup4, "pylint==2.15.3", requests, adafruit-circuitpython-datetime, click, python-dateutil]
+- repo: https://github.com/psf/black
+  rev: 23.7.0
+  hooks:
+  - id: black
 - repo: https://github.com/pycqa/isort
-  rev: 5.10.1
+  rev: 5.12.0
   hooks:
     - id: isort
       name: isort (python)
       args: ['--profile', 'black']
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+  -   id: check-yaml
+  -   id: end-of-file-fixer
+      exclude: tests
+  -   id: trailing-whitespace
+      exclude: tests
+- repo: https://github.com/fsfe/reuse-tool
+  rev: v2.1.0
+  hooks:
+  - id: reuse
+- repo: https://github.com/pycqa/pylint
+  rev: v2.17.1
+  hooks:
+  - id: pylint
