Add a useful commandline program

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,12 @@ package_dir =
     =.
 python_requires = >=3.9
 packages = leapseconddata
+install_requires =
+    click
 
 [options.package_data]
 leapseconddata = py.typed
+
+[options.entry_points]
+console_scripts =
+    leapsecond = leapseconddata.__main__:cli
