Enable ruff E, F, and D tests
.. with some D tests ignored, especially conflicting ones

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,8 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
+[tool.ruff]
+line-length=120
+[tool.ruff.lint]
+select = ["E", "F", "D"]
+ignore = ["D203", "D213", "D400", "D415"]
