--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,5 @@ build-backend = "setuptools.build_meta"
 [tool.ruff]
 line-length=120
 [tool.ruff.lint]
-select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B", "FBT"]
+select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B", "FBT", "A", "COM", "C4", "DTZ"]
 ignore = ["D203", "D213", "D400", "D415"]
