--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ write_to = "leapseconddata/__version__.py"
 line-length=120
 [tool.ruff.lint]
 select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B", "FBT", "A", "COM", "C4", "DTZ", "FA", "ISC", "ICN", "PIE", "PYI", "Q", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "C", "R", "W", "FLY", "RUF", "PL"]
-ignore = ["D203", "D213", "D400", "D415", "ISC001"]
+ignore = ["D203", "D213", "D400", "D415", "ISC001", "COM812"]
 [project]
 name = "leapseconddata"
 authors = [{name = "Jeff Epler", email = "jepler@gmail.com"}]
