--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ line-length=120
 [tool.ruff.lint]
 select = ["E", "F", "D", "I", "N", "UP", "YTT", "BLE", "B", "FBT", "A", "COM", "C4", "DTZ", "FA", "ISC", "ICN", "PIE", "PYI", "Q", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "C", "R", "W", "FLY", "RUF", "PL"]
 ignore = ["D203", "D213", "D400", "D415", "ISC001", "COM812"]
+exclude = ["docs/**/*.py"]
 [project]
 name = "leapseconddata"
 authors = [{name = "Jeff Epler", email = "jepler@gmail.com"}]
