--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,6 +7,7 @@ coverage
 mypy; implementation_name=="cpython"
 pre-commit
 setuptools>=45
+setuptools_scm[toml]>=6.0
 sphinx
 sphinx-autodoc-typehints
 sphinx-rtd-theme
